# PI-Gem

./: .gitignore  README.md  inicializar.py  requirements.txt
backend/: config.py  main.py  orquestador.py
backend/modulos/: agente.py  audio.py  gemini_cliente.py  herramientas.py  memoria.py  observador.py  perfil_usuario.py  powershell.py  screenshot.py  skills.py  vision.py  vtube.py  wake_word.py
backend/prompts/: system_prompt.py
docs/: db_instrucciones.md  guia_avatar_blender_vrm.md
frontend/: index.html
frontend/css/: main.css
frontend/js/: agent.js  app.js  avatar.js  camara.js  chat.js  confirm.js  main.js  skills.js  status.js  ws.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: conftest.py  test_gemini_cliente.py  test_herramientas.py  test_memoria.py  test_orquestador.py  test_skills.py
